# FAC

./: .gitmodules  exploitgen.py  test_exploit.py  test_exploit.sol  test_gen.py  test_runner.py
.hypothesis/tmp/: tmpi_d71d7j
realtool/: pyproject.toml
realtool/smart_contract_aeg/: __main__.py
realtool/smart_contract_aeg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
realtool/smart_contract_aeg/Runner/: __init__.py  runner.py
realtool/smart_contract_aeg/reviser/: __init__.py  revision.py
realtool/smart_contract_aeg/vuln_module/: RoleViolation.py
runner_tests/: exploit.sol  setup.sol  target.sol
smart_contract_aeg/: README.md
smart_contract_aeg/smart_contract_aeg/: __main__.py  config.py  utils.py
smart_contract_aeg/smart_contract_aeg/Runner/: __init__.py  runner.py  setup.py
smart_contract_aeg/smart_contract_aeg/exploit_gen/: RoleViolation.py  __init__.py
smart_contract_aeg/smart_contract_aeg/reviser/: revision.py
smart_contract_aeg/smart_contract_aeg/vuln_module/: RoleViolation.py
smart_contract_aeg/tests/contracts/: basic_tests.sol
smart_contract_aeg/tests/non_trivial/: apedao.sol
smart_contract_aeg/tests/runner/contracts/: compiler_error.sol
src/: aeg.py
src/Runner/: runner.py
src/reviser/: revision.py
src/vuln_module/: RoleViolation.py
tests/contracts/: ownership_changes.sol
tests/runner/: test.py
tests/runner/contracts/: compiler_error.sol  runtime_error.sol  target.sol  working.sol
